fixed overlapping on testimonial

--- a/stylesheets/testimonial.css
+++ b/stylesheets/testimonial.css
@@ -6,7 +6,6 @@
 }
 
 h1 {
-    height: 240px;
     padding: 4rem 1rem;
     font-family: "Danfo";
     font-size: 80px;
